--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Jamie Geddes' blog
 subtitle: A Developing Story
-description:
+description: A blog about software development
 author: Jamie Geddes
 language: en-EN
 timezone: Europe/London
