Set language to en-us to prevent weird random selection

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Jamie Geddes' blog
 subtitle: A Developing Story
 description: A blog about software development
 author: Jamie Geddes
-language: en-EN
+language: en-us
 timezone: Europe/London
 
 # URL
