Added a new widget About Me

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Jamie Geddes' blog
 subtitle: A Developing Story
 description: A blog about software development
 author: Jamie Geddes
-language: en-us
+language: default
 timezone: Europe/London
 
 # URL
